# kivy-reloader

./: .gitattributes  .gitignore  LICENSE  README.md  a.py  app.py  b.py  buildozer.spec  c.py  compile.py  compile_app.py  constants.py  custom_reloader.py  kivy-reloader.toml  main.py  new steps.yaml  new steps:.yaml  production.py  pyproject.toml  quick.py  send_app_to_phone.py  settings.py  utils.py
.ci/: modify_ios.py
.github/workflows/: ci.yml  nightly.yml  python-package-conda.yml  python-package-ios.yml
beautifulapp/: __init__.py  utils.py
beautifulapp/screens/: main_screen.kv  main_screen.py
kivy_reloader/: .kivy_reloader  __init__.py  android_app.py  app.py  base_app.py  bootstrap.py  buildozer.spec  compile_app.py  config.py  constants.py  custom_reloader.py  delta_transfer.py  desktop_app.py  detection.py  kivy-reloader.toml  lang.py  launcher.py  main.py  send_app_to_phone.py  tree_formatter.py  utils.py
kivy_reloader/configurator/: __init__.py  app.py  backend_detect.py  command_history.py  config_loader.py  event_bus.py  gui.py  model.py  schema.py  status_checks.py  styles.py
kivy_reloader/configurator/graphics/: __init__.py  gradients.py
kivy_reloader/configurator/screens/: core.kv  core.py
kivy_reloader/configurator/theme/: __init__.py  colors.py  fonts.py  icons.py
kivy_reloader/configurator/widgets/cards/: __init__.py  advanced_card.kv  advanced_card.py  audio_card.kv  audio_card.py  core_card.kv  core_card.py  deployment_card.kv  deployment_card.py  device_card.kv  device_card.py  display_card.kv  display_card.py  notifications_card.kv  notifications_card.py  performance_card.kv  performance_card.py  quick_commands_card.kv  quick_commands_card.py  services_card.kv  services_card.py  status_card.kv  status_card.py  window_card.kv  window_card.py
kivy_reloader/configurator/widgets/command_panel/: __init__.py  command_panel.kv  command_panel.py
kivy_reloader/configurator/widgets/common/: __init__.py  box_chip_input.kv  box_chip_input.py  card.kv  card.py  chip_input.kv  chip_input.py  collapsible_section.kv  collapsible_section.py  confirm_popup.kv  confirm_popup.py  help_popup.kv  help_popup.py  radio_button.kv  radio_button.py  switch.kv  switch.py  text_field.kv  text_field.py
kivy_reloader/configurator/widgets/picker/: __init__.py  dropdown.kv  dropdown.py  folder_selection_controller.py  selection_controller.py
kivy_reloader/configurator/widgets/sidebar/: __init__.py  sidebar.kv  sidebar.py
kivy_reloader/configurator/widgets/toolbar/: __init__.py  toolbar.kv  toolbar.py
kivy_reloader/p4a-recipes/watchdog/: __init__.py
screens/: main_screen.kv  main_screen.py
scripts/: bump_version.py  subset_fonts.py
services/: __init__.py  hello_world_service.py
tests/: test_hot_reload.py  test_smoke.py
