[tool.poetry]
name = "kivy-reloader"
version = "0.5.5"
description = "Hot reload your Kivy app on multiple Android phones and computer in real-time."
authors = ["filipemarch <filipe.marchesini@gmail.com>"]
readme = "README.md"
packages = [{ include = "kivy_reloader" }]

[tool.poetry.urls]
"Homepage" = "https://kivyschool.com/kivy-reloader/"
"Repository" = "https://github.com/kivy-school/kivy-reloader"


[tool.poetry.dependencies]
python = "^3.10"
cython = "^3.1.2"
kaki = "^0.1.9"
trio = "^0.30.0"
buildozer = "1.5.0"
plyer = "^2.1.0"
toml = "^0.10.2"
typer = "^0.16.0"
readchar = "^4.2.1"
colorama = "^0.4.6"
psutil = "^6.1.1"
pip = "^25.1.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
taskipy = "^1.14.1"
icecream = "^2.1.5"

[tool.poetry.scripts]
kivy-reloader = 'kivy_reloader.bootstrap:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "isort . && black ."
