[project]
name = "kivy-reloader"
version = "0.6.0"
description = "Hot reload your Kivy app on multiple Android phones and computer in real-time."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "filipemarch", email = "filipe.marchesini@gmail.com" }]
urls = { Homepage = "https://kivyschool.com/kivy-reloader/", Repository = "https://github.com/kivy-school/kivy-reloader" }
dependencies = [
    "buildozer>=1.5.0",
    "colorama>=0.4.6",
    "cython>=3.1.2",
    "kaki>=0.1.9",
    "pip>=25.1.1",
    "plyer>=2.1.0",
    "psutil>=7.0.0",
    "readchar>=4.2.1",
    "toml>=0.10.2",
    "trio>=0.30.0",
    "typer>=0.16.0",
]

[dependency-groups]
dev = ["icecream>=2.1.5", "isort>=6.0.1", "ruff>=0.12.5", "pytest>=8.0.0"]

[project.scripts]
kivy-reloader = 'kivy_reloader.bootstrap:main'

[tool.ruff]
line-length = 88
extend-exclude = ['.venv']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'


[tool.ruff.lint.per-file-ignores]
"kivy_reloader/app.py" = ["PLC0415", "PLR6301"]

[tool.poetry]
name = "kivy-reloader"
version = "0.6.0"
description = "Hot reload your Kivy app on multiple Android phones and computer in real-time."
authors = ["filipemarch <filipe.marchesini@gmail.com>"]
readme = "README.md"
packages = [{ include = "kivy_reloader" }]


[tool.poetry.urls]
"Homepage" = "https://kivyschool.com/kivy-reloader/"
"Repository" = "https://github.com/kivy-school/kivy-reloader"

[tool.poetry.dependencies]
buildozer = "1.5.0"
colorama = "^0.4.6"
cython = "^3.1.2"
kaki = "^0.1.9"
pip = "^25.1.1"
plyer = "^2.1.0"
python = "^3.10"
psutil = "^7.0.0"
readchar = "^4.2.1"
toml = "^0.10.2"
trio = "^0.30.0"
typer = "^0.16.0"

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.5"
isort = "^6.0.1"
ruff = "^0.12.5"

[tool.poetry.scripts]
kivy-reloader = 'kivy_reloader.bootstrap:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
